--- a/src/jade/template/_default.jade
+++ b/src/jade/template/_default.jade
@@ -1,6 +1,6 @@
 include _mixins
 
-- var meta_title = 'Title'
+- var meta_title = 'What you have missed when you are coding.'
 - var img_favicon = 'assets/images/favicon.png'
 
 doctype html
@@ -16,8 +16,6 @@ html(lang='en')
     link(href=img_favicon, rel='shortcut icon', type='image/vnd.microsoft.icon')
 
     block css
-    script.
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-69798920-1', 'auto');ga('send', 'pageview');
     block hjs
 
 
