--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -4,6 +4,9 @@ extends template/_default.jade
 block append css
   +ex_css('http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext')
 block append hjs
+  +ex_js('https://code.jquery.com/jquery-2.2.1.min.js')
   +jsF('main.js')
 
 block contents
+  .bg-insta-info
+  .main-insta-view
