add axis and month control

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -9,4 +9,10 @@ block append hjs
 
 block contents
   .bg-insta-info
-  .main-insta-view
+  .axis-wrapper
+    .main-insta-view
+    .axis-info
+      .axis-control
+        span.control#prev <
+        span.month-label
+        span.control#next >
