--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -19,16 +19,19 @@ body
     display block
     width 100vw
     height 100vh
-    background-color rgba(255,255,255,.6)
+    background-color rgba(255,255,255,.7)
+
+.axis-wrapper
+  position absolute
+  top 50%
+  left 50%
+  transform translate(-50%, -50%)
 
 .main-insta-view
   width 80vw
   min-width 800px
   height 70vh
-  position absolute
-  top 40%
-  left 50%
-  transform translate(-50%, -50%)
+  position relative
   // background-color rgba(255,255,255,.8)
 
 .insta-img
@@ -36,9 +39,41 @@ body
   cursor pointer
   width 20px
   height 20px
-  transition transform .2s
   position absolute
   border 1px solid rgba(0,0,0,.2)
+  transition transform .2s
   &:hover
     transform translateY(-2px)
+
+.axis-info
+  width 80vw
+  min-width 800px
+  height 80px
+  position relative
+  top 20px
+  left 5px
+  // border-top 2px solid rgba(0,0,0,.2)
+
+.date-label
+  position absolute
+  font-size 10px
+
+.axis-control
+  text-align center
+  padding-top 25px
+  text-transform uppercase
+  font-size 14px
+  .month-label
+    padding 0 30px
+  .control
+    cursor pointer
+    display inline-block
+    border-radius 5px
+    padding 5px 5px
+    color #fff
+    font-weight 700
+    background-color rgba(0,0,0,.2)
+    transition all .2s
+    &:hover
+      background-color rgba(0,0,0,.4)
   
