--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -13,6 +13,15 @@ block contents
     .main-insta-view
     .axis-info
       .axis-control
-        span.control#prev <
+        span.fa.fa-chevron-left.control#prev
         span.month-label
-        span.control#next >
+        span.fa.fa-chevron-right.control#next
+  .img-fullscreen
+    img
+    p 
+  .view-login
+    .form-wrapper
+      img.logo(src='./assets/images/logo.png')
+      .btn-login 
+        span.fa.fa-github
+        span Login with GitHub
