--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,11 +1,12 @@
 @import 'nib'
+@import './font-awesome.min.css'
 global-reset()
 
 body
   background-color #eee
   font-family Avenir, 'Lato', sans-serif
   size 12px
-  color #666
+  color #333
   
 .bg-insta-info
   width 100vw
@@ -22,9 +23,7 @@ body
     background-color rgba(255,255,255,.7)
 
 .axis-wrapper
-  position absolute
-  top 50%
-  left 50%
+  absolute top 50% left 50%
   transform translate(-50%, -50%)
 
 .main-insta-view
@@ -45,6 +44,24 @@ body
   &:hover
     transform translateY(-2px)
 
+.img-fullscreen
+  display none
+  background rgba(#fff, .9)
+  fixed top left
+  size 100%
+  cursor zoom-out
+  img
+    height 80%
+    width auto
+    @media screen and (max-width: 900px)
+      width 100%
+      height auto
+    absolute top 45% left 50%
+    transform translate(-50%, -50%)
+  p
+    absolute bottom 10% left 50%
+    transform translateX(-50%)
+
 .axis-info
   width 80vw
   min-width 800px
@@ -62,18 +79,54 @@ body
   text-align center
   padding-top 25px
   text-transform uppercase
-  font-size 14px
+  font-size 12px
+  letter-spacing 1px
   .month-label
+    display inline-block
     padding 0 30px
+    width 150px
   .control
     cursor pointer
     display inline-block
     border-radius 5px
-    padding 5px 5px
+    padding 5px 7px
     color #fff
-    font-weight 700
     background-color rgba(0,0,0,.2)
     transition all .2s
     &:hover
       background-color rgba(0,0,0,.4)
-  
+
+.view-login
+  background-color #eee
+  fixed top left
+  size 100%
+  .form-wrapper
+    absolute top 50% left 50%
+    transform translate(-50%, -50%)
+  img
+    display block
+    margin-left auto
+    margin-right auto
+    size 60%
+  .btn-login
+    margin-left auto
+    margin-right auto
+    display block
+    margin-top 50px
+    width 200px
+    height 40px
+    line-height 40px
+    text-align center
+    background-color rgba(0,0,0,.8)
+    color #fff
+    font-size 12px
+    letter-spacing 1px
+    border-radius 3px
+    cursor pointer
+    transition all .2s
+    text-transform uppercase
+    .fa
+      font-size 16px
+      margin-right 15px
+    &:hover
+      background-color rgba(0,0,0,1)
