--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -4,7 +4,7 @@ global-reset()
 
 body
   background-color #eee
-  font-family Avenir, 'Lato', sans-serif
+  font-family Hack, Helvetica, Arial, sans-serif
   size 12px
   color #333
   
@@ -103,30 +103,32 @@ body
   .form-wrapper
     absolute top 50% left 50%
     transform translate(-50%, -50%)
-  img
-    display block
-    margin-left auto
-    margin-right auto
-    size 60%
-  .btn-login
-    margin-left auto
-    margin-right auto
-    display block
-    margin-top 50px
-    width 200px
-    height 40px
-    line-height 40px
-    text-align center
-    background-color rgba(0,0,0,.8)
-    color #fff
-    font-size 12px
-    letter-spacing 1px
-    border-radius 3px
-    cursor pointer
-    transition all .2s
-    text-transform uppercase
-    .fa
-      font-size 16px
-      margin-right 15px
-    &:hover
-      background-color rgba(0,0,0,1)
+    .title-anim
+      display block
+      height 200px
+      width 200px
+      margin-left auto
+      margin-right auto
+      font-size 30px
+    .btn-login
+      margin-left auto
+      margin-right auto
+      display block
+      margin-top 50px
+      width 200px
+      height 40px
+      line-height 40px
+      text-align center
+      background-color rgba(0,0,0,.8)
+      color #fff
+      font-size 12px
+      letter-spacing 1px
+      border-radius 3px
+      cursor pointer
+      transition all .2s
+      text-transform uppercase
+      .fa
+        font-size 16px
+        margin-right 15px
+      &:hover
+        background-color rgba(0,0,0,1)
