add readme files

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -20,11 +20,11 @@ block contents
   .img-fullscreen
     img
     p 
-  //- .view-login
-  //-   .form-wrapper
-  //-     .title-anim
-  //-       span.caption
-  //-       span#cursor |
-  //-     .btn-login 
-  //-       span.fa.fa-github
-  //-       span Login with GitHub
+  .view-login
+    .form-wrapper
+      .title-anim
+        span.caption
+        span#cursor |
+      .btn-login 
+        span.fa.fa-github
+        span Login with GitHub
