--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -11,7 +11,6 @@ body
 .bg-insta-info
   width 100vw
   height 100vh
-  // background-image url('./assets/images/sample_insta.jpg')
   background-position center
   background-size auto 100%
   background-repeat no-repeat
@@ -132,3 +131,17 @@ body
         margin-right 15px
       &:hover
         background-color rgba(0,0,0,1)
+
+.desc-subtitle
+  absolute top 0 left 0
+  z-index 5
+  font-size 50px
+  animation-name floating
+  animation-duration 2s
+  animation-iteration-count infinite
+
+@keyframes floating
+  0%, 100%
+    transform translateY(3px)
+  50%
+    transform translateY(-3px)
